--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/dna-protein-complex-leucine-zipper/scene.gltf"></a-asset-item>
+            <a-asset-item id="dna-protein-complex-leucine-zipper" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/dna-protein-complex-leucine-zipper/scene.gltf"></a-asset-item>
         </a-assets>
 
-        <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
+        <a-marker id="dna-protein-complex-leucine-zipper" type='barcode' value='1'>
+            <a-entity
+                gltf-model="#dna-protein-complex-leucine-zipper"
+                scale="1.5">
+            </a-entity>
         </a-marker>
 
-        <a-marker id="animated-marker" type='barcode' value='6'>
+        <a-assets>
+            <a-asset-item id="penicillin-binding-protein" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/penicillin-binding-protein/scene.gltf"></a-asset-item>
+        </a-assets>
+
+        <a-marker id="penicillin-binding-protein" type='barcode' value='2'>
             <a-entity
-                gltf-model="#animated-asset"
-                scale="2">
+                gltf-model="#penicillin-binding-protein"
+                scale="0.01">
             </a-entity>
         </a-marker>
 
