--- a/index.html
+++ b/index.html
@@ -11,12 +11,40 @@
 
         <a-assets>
             <a-asset-item id="dna-protein-complex-leucine-zipper" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/dna-protein-complex-leucine-zipper/scene.gltf"></a-asset-item>
+            <a-asset-item id="m33-tcr-p3m33lh-2-ld-complex-4nhu" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/m33-tcr-p3m33lh-2-ld-complex-4nhu/scene.gltf"></a-asset-item>
+            <a-asset-item id="protein-molecular-dynamics" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-molecular-dynamics/scene.gltf"></a-asset-item>
+            <a-asset-item id="protein-structure-pdb-id-1nfn1" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-structure-pdb-id-1nfn1/scene.gltf"></a-asset-item>
         </a-assets>
 
-        <a-marker id="dna-protein-complex-leucine-zipper" type='barcode' value='1'>
+        <a-marker id="dna-protein-complex-leucine-zipper-marker" type='barcode' value='1'>
             <a-entity
                 gltf-model="#dna-protein-complex-leucine-zipper"
-                scale="1.5">
+                position="0 0.4 -0.4"
+                scale="0.6 0.6 0.6">
+            </a-entity>
+        </a-marker>
+
+        <a-marker id="m33-tcr-p3m33lh-2-ld-complex-4nhu-marker" type='barcode' value='2'>
+            <a-entity
+                gltf-model="#m33-tcr-p3m33lh-2-ld-complex-4nhu"
+                position="0 0.5 0"
+                scale="0.8 0.8 0.8">
+            </a-entity>
+        </a-marker>
+
+        <a-marker id="protein-molecular-dynamics-marker" type='barcode' value='3'>
+            <a-entity
+                gltf-model="#protein-molecular-dynamics"
+                position="-0.5 0.5 0"
+                scale="0.02 0.02 0.02">
+            </a-entity>
+        </a-marker>
+
+        <a-marker id="protein-structure-pdb-id-1nfn1-marker" type='barcode' value='4'>
+            <a-entity
+                gltf-model="#protein-structure-pdb-id-1nfn1"
+                position="0 0.5 0"
+                scale="0.02 0.02 0.02">
             </a-entity>
         </a-marker>
 
