another attempt at fixing lysozyme model URL

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a-scene vr-mode-ui="enabled: false" embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="lysozyme-1g03-two" src="https://github.com/pesader/moleculAR/raw/main/assets/models/lysozyme-1g03-two/scene.glb"></a-asset-item>
+            <a-asset-item id="lysozyme-1g03-two" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/lysozyme-1g03-two/scene.glb"></a-asset-item>
             <a-asset-item id="m33-tcr-p3m33lh-2-ld-complex-4nhu" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/m33-tcr-p3m33lh-2-ld-complex-4nhu/scene.gltf"></a-asset-item>
             <a-asset-item id="protein-molecular-dynamics" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-molecular-dynamics/scene.gltf"></a-asset-item>
             <a-asset-item id="protein-structure-pdb-id-1nfn1" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-structure-pdb-id-1nfn1/scene.gltf"></a-asset-item>
