--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <a-scene vr-mode-ui="enabled: false" embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="lysozyme-1g03-two" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/lysozyme-1g03-two/scene.glb"></a-asset-item>
+            <a-asset-item id="dna-protein-complex-leucine-zipper" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/dna-protein-complex-leucine-zipper/scene.gltf"></a-asset-item>
             <a-asset-item id="m33-tcr-p3m33lh-2-ld-complex-4nhu" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/m33-tcr-p3m33lh-2-ld-complex-4nhu/scene.gltf"></a-asset-item>
             <a-asset-item id="protein-molecular-dynamics" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-molecular-dynamics/scene.gltf"></a-asset-item>
             <a-asset-item id="protein-structure-pdb-id-1nfn1" src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/protein-structure-pdb-id-1nfn1/scene.gltf"></a-asset-item>
         </a-assets>
 
-        <a-marker id="lysozyme-1g03-two" type='barcode' value='1'>
+        <a-marker id="dna-protein-complex-leucine-zipper-marker" type='barcode' value='1'>
             <a-entity
-                gltf-model="#lysozyme-1g03-two"
+                gltf-model="#dna-protein-complex-leucine-zipper"
                 position="0 1.5 -0.8"
                 scale="1.2 1.2 1.2">
             </a-entity>
