add missing "#" in aframe entity

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <a-marker id="lysozyme-ligand" type='barcode' value='5'>
             <a-entity
-                gltf-model="lysozyme-ligand"
+                gltf-model="#lysozyme-ligand"
                 position="0 1.0 0"
                 scale="0.03 0.03 0.03">
             </a-entity>
