fix size and positioning of lysozyme model

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <a-marker id="lysozyme-ligand" type='barcode' value='5'>
             <a-entity
                 gltf-model="#lysozyme-ligand"
-                position="0 1.0 0"
-                scale="0.03 0.03 0.03">
+                position="0 1.0 -0.5"
+                scale="3.0 3.0 3.0"
             </a-entity>
         </a-marker>
 
