--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/dev/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene vr-mode-ui="enabled: false" embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
@@ -54,6 +55,7 @@
                 gltf-model="#lysozyme-ligand"
                 position="0 1.0 -0.5"
                 scale="3.0 3.0 3.0"
+                animation-mixer>
             </a-entity>
         </a-marker>
 
