move back to regular non-compressed file

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/dev/aframe/build/aframe-ar.js"></script>
-    <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/libs/draco/draco_decoder.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/libs/draco/draco_wasm_wrapper.js"></script>
-    <script src="gltf-model-draco.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -18,12 +15,12 @@
 
         <a-assets timeout="300000">
             <a-asset-item id="lysozyme-ligand"
-                src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/lysozyme-ligand/scene-draco.glb">
+                src="https://raw.githubusercontent.com/pesader/moleculAR/main/assets/models/lysozyme-ligand/scene.glb">
             </a-asset-item>
         </a-assets>
 
         <a-marker id="lysozyme-ligand" type='barcode' value='5'>
-            <a-entity gltf-model-draco="#lysozyme-ligand" position="0 1.5 0.0" scale="6.0 6.0 6.0" animation-mixer>
+            <a-entity gltf-model="#lysozyme-ligand" position="0 1.5 0.0" scale="6.0 6.0 6.0" animation-mixer>
             </a-entity>
         </a-marker>
 
