--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a-scene
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      renderer="logarithmicDepthBuffer: true"
       vr-mode-ui="enabled: false"
     >
       <a-assets>
