--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
     <script src="./tracked-ui.js"></script>
     <script src="./script.js"></script>
+    <style>
+      .floating-button {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 50px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        font-size: 18px;
+        text-align: center;
+        cursor: pointer;
+        z-index: 1000;
+      }
+      .floating-button:hover {
+        background-color: #0056b3;
+      }
+      .hidden {
+          display: none;
+      }
+    </style>
   </head>
   <body style="margin: 0px; overflow: hidden;">
     <!-- UI -->
@@ -22,6 +46,9 @@
         </p>
       </div>
     </div>
+
+    <!-- Floating Button -->
+    <button id="reset-button" class="floating-button hidden" onclick="handleClick()">Jogar novamente</button>
 
     <!-- SCENE -->
     <a-scene
