--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <style>
       .floating-button {
         position: fixed;
-        bottom: 20px;
+        bottom: 1.25rem;
         left: 50%;
         transform: translateX(-50%);
-        padding: 10px 20px;
+        padding: 0.625rem 1.25rem;
         background-color: #007bff;
         color: white;
         border: none;
-        border-radius: 50px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        font-size: 18px;
+        border-radius: 3.125rem;
+        box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+        font-size: 1.125rem;
         text-align: center;
         cursor: pointer;
         z-index: 1000;
@@ -40,7 +40,7 @@
           <img
             id="dockingicon"
             src="assets/images/docking.png"
-            width="110px"
+            width="7rem"
             style="opacity: 1; transition: opacity 1s ease-in-out;"
           />
         </p>
