--- a/index.html
+++ b/index.html
@@ -10,38 +10,46 @@
     <style>
       .floating-button {
         position: fixed;
-        bottom: 1.25rem;
+        bottom: 2vh;
         left: 50%;
         transform: translateX(-50%);
-        padding: 0.625rem 1.25rem;
+        padding: 1vh 2vw;
         background-color: #007bff;
         color: white;
         border: none;
-        border-radius: 3.125rem;
-        box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
-        font-size: 1.125rem;
+        border-radius: 50px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        font-size: 2.5vw;
         text-align: center;
         cursor: pointer;
         z-index: 1000;
       }
+
       .floating-button:hover {
         background-color: #0056b3;
       }
+
+      @media (min-width: 768px) {
+        .floating-button {
+          font-size: 1.5vw;
+          padding: 1.5vh 3vw;
+        }
+      }
+
       .hidden {
           display: none;
       }
     </style>
   </head>
-  <body style="margin: 0px; overflow: hidden;">
+  <body style="margin: 0rem; overflow: hidden;">
     <!-- UI -->
     <div id="UI" style="position: fixed; z-index: 1000; display: none;">
-      <div style="margin-left: -48px;">
+      <div style="margin-left: -3rem;">
         <p>
           <img
             id="dockingicon"
             src="assets/images/docking.png"
-            width="7rem"
-            style="opacity: 1; transition: opacity 1s ease-in-out;"
+            style="opacity: 1; transition: opacity 1s ease-in-out; width: 20vw; height: auto;"
           />
         </p>
       </div>
