--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- SCENE -->
     <a-scene
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3_HAMMING63;"
       renderer="logarithmicDepthBuffer: true"
       vr-mode-ui="enabled: false"
     >
@@ -67,7 +67,7 @@
       <a-marker
         smooth="true"
         type="barcode"
-        value="5"
+        value="1"
         tracked-ui="element: #UI; offset: 0 -3000 0"
         ui-logic
       >
