feat(ar): pause animation if marker is lost
Closes: https://github.com/pesader/moleculAR/issues/2

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         ></a-asset-item>
       </a-assets>
       <a-marker
+        id="marker"
         smooth="true"
         type="barcode"
         value="1"
